recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:3: error: class List is abstract; cannot be instantiated
var rep = new List[Int]
          ^